# mongoclient-cmake

./: CMakeLists.txt  README.md
src/mongo/: CMakeLists.txt  MongoClientExamples.cmake  pch.h
src/mongo/base/: CMakeLists.txt  global_initializer.h  global_initializer_registerer.h  initializer.cpp  initializer_context.h  initializer_dependency_graph.h  make_string_vector.h  status.h  string_data.h
src/mongo/bson/: bson_builder_base.h  bson_validate.h  bsonelement.h  bsonmisc.h  bsonobj.h  bsonobjbuilder.h  bsonobjiterator.h  bsontypes.h  oid.h  ordering.h
src/mongo/bson/bsondemo/: CMakeLists.txt
src/mongo/bson/util/: atomic_int.h  bson_extract.h  builder.h
src/mongo/client/: auth_helpers.h  connpool.cpp  connpool.h  dbclient.cpp  dbclient.h  dbclient_rs.h  dbclientcursor.h  dbclientinterface.h  export_macros.h  gridfs.h  sasl_client_authenticate.h  syncclusterconnection.h
src/mongo/client/examples/: CMakeLists.txt  authTest.cpp
src/mongo/db/: dbmessage.h  json.h  lasterror.h  server_options.h
src/mongo/db/auth/: CMakeLists.txt
src/mongo/logger/: console.h  labeled_level.h  log_manager.h  log_severity.h  logger.h  logstream_builder.h  message_event_utf8_encoder.h  ramlog.h  rotatable_file_manager.h  rotatable_file_writer.h  tee.h
src/mongo/platform/: atomic_word.h  process_id.h  random.h
src/mongo/util/: assert_util.h  background.h  base64.h  debug_util.h  fail_point.h  fail_point_registry.h  fail_point_service.h  file.h  file_allocator.h  histogram.h  intrusive_counter.h  log.h  md5.cpp  md5.h  password.h  paths.h  processinfo.h  processinfo_darwin.cpp  processinfo_linux2.cpp  signal_handlers.h  stacktrace.h  stringutils.h  text.h  time_support.h  trace.h  version.h
src/mongo/util/concurrency/: msg.h  mutex.h  rwlock.h  rwlockimpl.cpp  rwlockimpl.h  simplerwlock.h  spin_lock.h  synchronization.h  task.h  thread_name.h  thread_pool.h  ticketholder.h
src/mongo/util/net/: hostandport.h  httpclient.h  listen.h  message.h  message_port.cpp  message_port.h  sock.cpp  sock.h  socket_poll.h  ssl_manager.h
utils/: generate_action_types.cpp  generate_error_codes.cpp
